<resources>
    <string name="app_name">Oldema</string>
    <string name="title_home">Step</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Game Report</string>

    <string name="welcome_cal">Calculation</string>
    <string name="title_img_info">title img</string>
    <string name="title_btn">enter cal game</string>
    <string name="high_score_cal">Highest Score:</string>
    <string name="current_score">Score:</string>
    <string name="input_indicate">Your Answer:</string>
    <string name="lose_msg">You lose!</string>
    <string name="Win_msg">You Win!</string>
    <string name="lose_score">Your Score:</string>
    <string name="win_score">New Record:</string>
    <string name="you_win">Great Job!</string>
    <string name="you_lose">Keep Trying!</string>


    <string name="action_settings">Settings</string>
    <string name="IDS_BUTTON_BEGIN">Start</string>
    <string name="IDS_BUTTON_RE_BEGIN">ReStart</string>
    <string name="IDS_GAME_LOST">You Lose!</string>
    <string name="IDS_GAME_RE_BEGIN_BABY">Will switch to image version restart now?</string>
    <string name="IDS_GAME_RE_BEGIN_YOUNG">Will switch to image version restart now?</string>
    <string name="IDS_GAME_WON">You Win!</string>
    <string name="IDS_LABEL_KEY_PRESS_COUNT">Slide Times:</string>
    <string name="IDS_RADIO_BABY">Image Version</string>
    <string name="IDS_RADIO_YOUNG">Digital Version</string>
    <string name="IDS_BUTTON_YES">Yes</string>
    <string name="IDS_BUTTON_NO">No</string>

    <string name="high_score">HIGHEST SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>

    <!-- Onboarding page -->
    <string name="nul">" "</string>
    <string name="on_boarding_intro">"Explore more interesting games?
        track your daily steps?
        we are here with you~"</string>

    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">Introduction</string>

    <string name="intro2048">In this game, user needs to slide numbered tiles on a grid to combine them to create a tile with the number 2048. Every turn, a new tile with a value 2 or 4 will randomly appear on the board. Tiles will move toward the users\' chosen direction, and two tiles of the same number will collide while moving, they will merge into a tile with the total value of the two tiles that collided.</string>

    <string name="introCal">In this game, you will need to calculate the equation that appeared on the screen. You will get one score if you can answer it correctly, and you can see your current score on top of the screen. The game will continue until you get one wrong answer. Go to Video: <a href="https://youtu.be/mvZ01vugWVk">Calculation game guide Video</a></string>
    <string name="introGameThree">In this game, you need to find all the same pictures within the specified time. If the two flipped pictures are inconsistent, they will be flipped over again. Go to Video: <a href="https://youtu.be/IenpbI2TMBs">Image game guide Video</a></string>


    <string name="title_opendata">Know More!</string>
    <string name="OD_title_text">Dementia describes a collection of symptoms caused by disorders affecting the brain which affects thinking, behaviour and the ability to perform everyday tasks. Brain function is affected enough to interfere with the person’s normal social or working life.
</string>
    <string name="OD_number01">459,000</string>
    <string name="OD_title_01">What is Dementia?</string>
    <string name="OD_Title02">Who gets dementia?</string>
    <string name="OD_Content02">Most people with dementia are older and it is more common after the age of 65 years. People in their 40s and 50s can also have dementia.  As per ABS, the deaths due to Dementia increase every day in Australia.</string>
    <string name="OD_title03">What are the early signs?</string>
    <string name="OD_Content03">The early signs of dementia are very subtle and vague and may not be immediately obvious. Some common symptoms may include:  • Progressive and frequent memory loss • Confusion • Personality change • Apathy and withdrawal • Loss of ability to perform everyday tasks. </string>
    <string name="OD_title04">What can be done to help?</string>
    <string name="OD_content04">At present there is no prevention or cure for most forms of dementia. However, some medications have been found to reduce some symptoms. Support from Family and Friends is vital for people with dementia.</string>
    <string name="OD_link01">Want to know more! \n Check it out <a href="https://www.dementia.org.au">Dementia.org.au!! </a> </string>
    <string name="OD_TextforNumber">The total cases in Australia for 2020</string>
    <string name="OD_know_more">Would you like to know about Dementia?</string>
    <string name="OD_barchartDesc">Number of Deaths Across Australia</string>

    <string name="main_content">In this game, user needs to slide numbered tiles on a grid to combine them to create a tile with the number 2048. Every turn, a new tile with a value 2 or 4 will randomly appear on the board. Tiles will move toward the users\' chosen direction, and two tiles of the same number will collide while moving, they will merge into a tile with the total value of the two tiles that collided. Go to Video: <a href="https://youtu.be/khnyOFmCgII">2048 guide Video</a></string>

    <string name="metion1">Try out the other games and the Steps counter! </string>
    <string name="metion2">Go out now and take a brisk walk!</string>
    <string name="metion3">Walking for 30 mins daily would improve your physical well being! </string>
    <string name="metion4">Playing Games that kindle your memory is a good way to improve your brain power! </string>
    <string name="metion5">Try to stay calm and do not overthink. Try our Games! </string>
    <string name="metion6">Carry a notepad with you to note down the names and dates. </string>
    <string name="metion7">Have a healthy diet with lots of fruits and Vegetables!. </string>
    <string name="metion8">You are doing Great! Stay positive and Strong. </string>

</resources>
